--- a/DiffTerm/diffTerm.tex
+++ b/DiffTerm/diffTerm.tex
@@ -1007,7 +1007,7 @@ are in the body of $W$ and $p'(t)$ is in the tail.
 
 
 For $i \leq n$, let $\rho_i$ denote the kernel of the projection of $\alg{B}$ onto $\alg{A}_i$,
-so $\alg{B} \cong \alg{A}_i/\rho_i$.
+so $\alg{B}/\rho_i \cong \alg{A}_i$.
 For a subset $\sigma \subseteq \nn$, define
 \[
 \rho_\sigma := \bigwedge_{j\in \sigma} \rho_j.
@@ -1383,6 +1383,7 @@ by Lemma~\ref{lem:fv_3-3} we may
 assume $\rho_0 \join \alpha = 1_{\alg B}$ and
 $\rho_1 \join \alpha < 1_{\alg B}$. By Lemma~\ref{lem:fv_3-2}
 we have $\rho_1 \ge \beta$.
+
 This implies that $0$ and $1$ have the same second coordinate; that is,
 $0 = (x_0,x_1)$ and $1 = (y_0,x_1)$ for some $x_0$, $y_0$ and $x_1\in A$.
 By Lemma~\ref{lem:nearperm}, $(0,t) \in \rho_0 \circ \beta$
