--- a/DiffTerm/inputs/wjdlatexmacs.sty
+++ b/DiffTerm/inputs/wjdlatexmacs.sty
@@ -84,10 +84,8 @@
 \newcommand{\sansRel}{\ensuremath{\mathsf{Rel}}}
 \newcommand{\sansInv}{\ensuremath{\mathsf{Inv}}}
 \newcommand{\sansFix}{\ensuremath{\mathsf{Fix}}}
-% \newcommand{\Inv}{\ensuremath{\mathsf{LD}}}
-\newcommand{\Inv}[1]{\ensuremath{#1^{\rtimes}}}
-% \newcommand{\Fix}{\ensuremath{\mathsf{\widehat{LD}}}}
-\newcommand{\Fix}[1]{\ensuremath{#1^{\ltimes}}}
+\newcommand{\Inv}[1]{\ensuremath{\mathcal{D}(#1)}}
+\newcommand{\Fix}[1]{\ensuremath{\breve{\mathcal{D}}(#1)}}
 \newcommand{\sansClo}{\ensuremath{\operatorname{\mathsf{Clo}}}}
 \newcommand{\sansR}{\ensuremath{\mathsf{R}}} % ALL FINITARY RELATIONS
 \newcommand{\sansS}{\ensuremath{\mathsf{S}}}
