--- a/DiffTerm/diffTerm.tex
+++ b/DiffTerm/diffTerm.tex
@@ -1670,14 +1670,15 @@ $crm^2$ by part~\eqref{speed2}. The result follows.
 Let $\alg A$ be a finite idempotent algebra with parameters as
 above.
 Then one can determine if $\bbV(\alg A)$ has a difference
-term in time $crn^4m^4$.
+term in time $c(rn^4m^4 + n^{14})$.
 \end{theorem}
 
 \begin{proof}
 Theorem~\ref{thm:algorithm} gives a three-step
 algorithm to test
 if $\bbV (\alg A)$ has a difference term.
-The first step is to test if $\bbV (\alg A)$ omits type~\utyp. This can be done in time $crn^3m$
+The first step is to test if $\bbV (\alg A)$ omits type~\utyp. This 
+can be done in time $crn^3m$
 by~\cite[Theorem~6.3]{Freese:2009}.
 
 Looking now at part (3) of Theorem~\ref{thm:algorithm},
@@ -1690,9 +1691,10 @@ over $\alpha$ is \atyp. Since at this point in the
 algorithm we know that $\alg A$ omits type ~\utyp,
 we can test if the type is \atyp\ by testing if
 $[\beta,\beta] \le \alpha$. By Proposition~\ref{speedprop}
-this can be done in time $crm^4$. Since we need to do
+this can be done in time $c(rm^4 + n^{10})$. 
+Since we need to do
 this for all $x_0$, $x_1$, $y_0$ and $y_1$, the total
-time for this step is at most $crn^4m^4$.
+time for this step is at most $crn^4m^4 + n^{14}$.
 
 A similar analysis applies to part~(2) and shows that it
 can be done in time $crn^3m^2$. Since $crn^4m^4$ dominates
