--- a/DiffTerm/diffTerm.tex
+++ b/DiffTerm/diffTerm.tex
@@ -454,14 +454,14 @@ MRREVIEWER = {Ivan Chajda},
 \def\OPTbindingoffset{0.35in} % Extra offset on the inner side
 %% \def\OPToutermargin{0.75in}   % Margin on the outer side of the page
 \def\OPToutermargin{1in}   % Margin on the outer side of the page
-\usepackage[papersize={\OPTpagesize},
-            twoside,
-            includehead,
-            top=\OPTtopmargin,
-            bottom=\OPTbottommargin,
-            inner=\OPTinnermargin,
-            outer=\OPToutermargin,
-            bindingoffset=\OPTbindingoffset]{geometry}
+%% \usepackage[papersize={\OPTpagesize},
+%%             twoside,
+%%             includehead,
+%%             top=\OPTtopmargin,
+%%             bottom=\OPTbottommargin,
+%%             inner=\OPTinnermargin,
+%%             outer=\OPToutermargin,
+%%             bindingoffset=\OPTbindingoffset]{geometry}
 \usepackage{url,amssymb,enumerate,tikz,scalefnt}
 \usepackage[normalem]{ulem} % for \sout (strikeout)   wjd: could remove this in final draft
 \usepackage[colorlinks=true,urlcolor=blue,linkcolor=blue,citecolor=blue]{hyperref}
