adds macro for ralph's comments

--- a/DiffTerm/inputs/wjdlatexmacs.sty
+++ b/DiffTerm/inputs/wjdlatexmacs.sty
@@ -322,7 +322,7 @@
 }
 
 %% Ralph's margin notes:  \rf{this is a note}
-\newcommandx{\caa}[2][1=]{
+\newcommandx{\rf}[2][1=]{
   \todo[linecolor=blue,backgroundcolor=blue!25,bordercolor=blue,#1]%
        {{\bf caa} \specialdate\today: #2}
 }
