--- a/DiffTerm/inputs/wjdlatexmacs.sty
+++ b/DiffTerm/inputs/wjdlatexmacs.sty
@@ -321,10 +321,16 @@
        {{\bf wjd} \specialdate\today: #2}
 }
 
-%% Ralph's margin notes:  \rf{this is a note}
+%% Ralph's margin notes:  \rsf{this is a note}
 \newcommandx{\rf}[2][1=]{
   \todo[linecolor=blue,backgroundcolor=blue!25,bordercolor=blue,#1]%
-       {{\bf caa} \specialdate\today: #2}
+       {{\bf rsf} \specialdate\today: #2}
+}
+
+%% Matt's margin notes:  \mav{this is a note}
+\newcommandx{\rf}[2][1=]{
+  \todo[linecolor=blue,backgroundcolor=blue!25,bordercolor=blue,#1]%
+       {{\bf mav} \specialdate\today: #2}
 }
 
 \newcommandx{\thiswillnotshow}[2][1=]{\todo[disable,#1]{#2}}
